Dokumentation der GroupManager-Klasse verbessert Aktive Gruppe wird jetzt wieder korrekt gespeichert und geladen Warnmeldungen in verschiedenen Gruppen behoben Einstellungsmöglichkeit für die Positionsmarkierungsfarbe und den Positionstext hinzugefügt